# aimem

./: .gitignore  aimem.log.jsonl  main.py  pyproject.toml
app/: log.py  main.py  mem_init.py
app/dto/: chat.py  mem.py
infra/embeddings/: base.py  configs.py  factory.py  ollama.py  openai.py
infra/embeddings/config/: base_cfg.py
infra/graphs/: configs.py
infra/llms/: aliyun.py  base.py  configs.py  consts.py  factory.py  litellm.py  ollama.py  openai.py  openai_structured.py
infra/llms/config/: base_cfg.py
infra/logutil/: context.py  filter.py  middleware.py
infra/utils/: format.py  llm.py  reflection.py
infra/vector_stores/: configs.py  factory.py
infra/vector_stores/milvus/: milvus.py
infra/vector_stores/pgvector/: pgvector.py
infra/vector_stores/qdrant/: qdrant.py
mem_tools/: __init__.py  abstract_out_mem.py
mem_tools/graph/: __init__.py  extract_entities_for_add_mem.py  extract_entities_for_search.py  extract_nodes_for_search.py  plan_mem_op.py  update_mem.py
mem_tools/vector/: abstract_out_mem.py  update_mem.py
memory/: __init__.py  config.py  consts.py  graph_memory.py  mem.py  mem_graph.py  mem_item.py  mem_vec.py  memory.py
